--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-28T14:32:25Z</date>
+						<date>2019-06-05T18:22:50Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -82,21 +82,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								TPGeujKpTzHL
-								QR5lGhvUSw==
+								5SEHlmzIRPnE
+								h1Zlyu2W+A==
 								</data>
 								<key>Size</key>
-								<integer>35739</integer>
+								<integer>35205</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								v9Af7SEGojgo
-								zGOufpUslA==
+								ZP2FJ/yve/bb
+								UMUDEFQ7OA==
 								</data>
 								<key>Size</key>
-								<integer>69192</integer>
+								<integer>68310</integer>
 							</dict>
 							<key>files/stacks-image-1e491bc-300x256.png</key>
 							<dict>
@@ -158,6 +158,26 @@
 								<key>Size</key>
 								<integer>40839</integer>
 							</dict>
+							<key>files/stacks-image-45fda98-250x260.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								l8H9kc9ii8h2
+								NizRj4XNwg==
+								</data>
+								<key>Size</key>
+								<integer>105228</integer>
+							</dict>
+							<key>files/stacks-image-45fda98-250x260@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								pnacJGDQuc99
+								lWcCfiGekw==
+								</data>
+								<key>Size</key>
+								<integer>401602</integer>
+							</dict>
 							<key>files/stacks-image-48ee80b-250x250.png</key>
 							<dict>
 								<key>Digest</key>
@@ -178,6 +198,26 @@
 								<key>Size</key>
 								<integer>336849</integer>
 							</dict>
+							<key>files/stacks-image-5dab26b-250x260.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								D0TrcOu48kDa
+								0smMKNI6Hg==
+								</data>
+								<key>Size</key>
+								<integer>73997</integer>
+							</dict>
+							<key>files/stacks-image-5dab26b-250x260@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								7jtUM9/g9wd6
+								PqIVYseRtg==
+								</data>
+								<key>Size</key>
+								<integer>238657</integer>
+							</dict>
 							<key>files/stacks-image-6a176f2.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -187,6 +227,26 @@
 								</data>
 								<key>Size</key>
 								<integer>229581</integer>
+							</dict>
+							<key>files/stacks-image-7ca5723-250x260.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								F43SwHG9eISq
+								4fDMJ4YlBQ==
+								</data>
+								<key>Size</key>
+								<integer>100673</integer>
+							</dict>
+							<key>files/stacks-image-7ca5723-250x260@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								829W9ha5iRlM
+								IT7BKh15Fw==
+								</data>
+								<key>Size</key>
+								<integer>375016</integer>
 							</dict>
 							<key>files/stacks-image-95da015-150x96.png</key>
 							<dict>
@@ -217,6 +277,26 @@
 								</data>
 								<key>Size</key>
 								<integer>653959</integer>
+							</dict>
+							<key>files/stacks-image-bcdb310-250x260.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								nlKP5a7IuNYc
+								laKH9nPmag==
+								</data>
+								<key>Size</key>
+								<integer>100679</integer>
+							</dict>
+							<key>files/stacks-image-bcdb310-250x260@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								jOEZ4E0dcsFS
+								fS+cc4Xm9Q==
+								</data>
+								<key>Size</key>
+								<integer>353179</integer>
 							</dict>
 							<key>files/stacks-image-cd71898-250x250.png</key>
 							<dict>
@@ -292,11 +372,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								jiLv6+n1/qgI
-								QAKREyWQyA==
+								99+yv+7pY8sw
+								4nvyjWPaPA==
 								</data>
 								<key>Size</key>
-								<integer>154890</integer>
+								<integer>171318</integer>
 							</dict>
 							<key>files/stacks_page_page49.js</key>
 							<dict>
@@ -312,11 +392,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								EFbZTNeVB3LN
-								h8bv+20D6A==
+								kqPnY/izYOEq
+								GZmQ5sx8cA==
 								</data>
 								<key>Size</key>
-								<integer>116412</integer>
+								<integer>131805</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
