CSE summit updates
CSE summit updates

--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -14634,7 +14634,7 @@
 					<key>page86 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-06-12T14:57:36Z</date>
+						<date>2019-06-13T15:48:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -14713,11 +14713,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								0pMculnL9v3X
-								wmNnrP+DwA==
+								9DoaP2w0G7/K
+								MgXKGTqxxA==
 								</data>
 								<key>Size</key>
-								<integer>19825</integer>
+								<integer>20202</integer>
 							</dict>
 							<key>files/stacks-image-a86827b-250x250.jpg</key>
 							<dict>
@@ -14743,31 +14743,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5NhtiRf5CDv+
-								WeLYmDeCCg==
+								tt6feU6wcYVa
+								4LOKgv9ZWA==
 								</data>
 								<key>Size</key>
-								<integer>105775</integer>
+								<integer>106597</integer>
 							</dict>
 							<key>files/stacks_page_page86.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								dBj/okx/G9N+
-								VdShlJ55Xw==
+								vkfSKyOHTnng
+								hNrxS+/MVw==
 								</data>
 								<key>Size</key>
-								<integer>21087</integer>
+								<integer>20660</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								TbyMt8wFpN6g
-								laBaWS1lGg==
+								4nCA4HrGjFUu
+								JmCH+Lohxw==
 								</data>
 								<key>Size</key>
-								<integer>49856</integer>
+								<integer>50422</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14866,7 +14866,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-06-13T15:34:50Z</date>
+						<date>2019-06-13T15:48:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -14895,11 +14895,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								QouruzjrH//F
-								TJn/Q9FLUQ==
+								GVFOPbRqafvp
+								ueA3tTgwAw==
 								</data>
 								<key>Size</key>
-								<integer>5663</integer>
+								<integer>5631</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14978,7 +14978,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-06-13T15:34:50Z</date>
+						<date>2019-06-13T15:48:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -16057,11 +16057,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								CVj6BqPfptPu
-								gHVS4pXZjw==
+								kVVE75HpmSQe
+								jD90ipblGg==
 								</data>
 								<key>Size</key>
-								<integer>4644</integer>
+								<integer>3793</integer>
 							</dict>
 							<key>vein.min.js</key>
 							<dict>
@@ -16215,7 +16215,7 @@
 				RDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0aWNpcGFu
 				dHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVkdWxlLnBk
 				Zl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFFLTU3QjlB
-				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcFZUk6FX7uADNIe
+				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcFZU+bzBdmADNIe
 				H0dIVk5TRGF0ZaJHI9MJCgtKTE6hS4AOoU2AD4AQXxAt
 				c2Z0cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9v
 				dC90ZW1wbGF0ZXJ5CNIeH1JTXxATTlNNdXRhYmxlRGlj
@@ -16225,14 +16225,14 @@
 				FoAVXxAkMkU4QzdEREMtQUVCNC00MUZCLUJGRUQtRTZC
 				OEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0aWNpcGFudHMg
 				SFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhENS0wNDgyLTQx
-				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwVlSToVg
-				QoAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
+				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwVlT5vMG
+				ioAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
 				eHN5cy53My51dm0uZWR1L3d3dy1yb290L3RlbXBsYXRl
 				cnnaLS4LLzAxEzIzNDVzNxYWd3h5ensIgCCAEYAAgACA
 				HoAbgBqAHYAcXxAkMzExQ0JERDItOTJCNy00MDE4LUIw
 				OTgtNDhGMjhFMEQwOUFGXxAcb2N0b3B1c19pY29uX3Ry
 				YW5zcGFyZW50LnBuZ18QJDAzQTRDMzNCLTY2NjAtNDMx
-				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBWVJOhWBr
+				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBWVPm8wa8
 				gAzTCQoLg4VOoYSAH6FNgA+AEF8QLXNmdHA6L2NtcGx4
 				c3lzLnczLnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVy
 				eV8Qbi92YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19w
@@ -16242,7 +16242,7 @@
 				kpOUCIAogBGAAIAAgCaAI4AigCWAJF8QJEVCN0EwMEJB
 				LTI0RTMtNDY4Qi1CNDU2LTlDMjM3QjgwRDBFQ1tmYXZp
 				Y29uLmljb18QJEE1NDVEMzc1LTFCNkItNEU5My1CQjU3
-				LTEyNEY1NzEyMEZFMtJDC5lFI0HBWVJOhWCFgAzTCQoL
+				LTEyNEY1NzEyMEZFMtJDC5lFI0HBWVPm8wbmgAzTCQoL
 				nJ5OoZ2AJ6FNgA+AEF8QLXNmdHA6L2NtcGx4c3lzLncz
 				LnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVyeV8QXS92
 				YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19wMGxteGI3
@@ -16252,7 +16252,7 @@
 				ECQ0MTExRkI1Mi1BMjJBLTRENjUtODY5Mi1CRTYzMEU2
 				RENBNkNfEBRhcHBsZS10b3VjaC1pY29uLnBuZ18QJEFC
 				NTBGRDUyLUE1NEUtNEYyMi05OTRELUUxNUE3RUYyMjRB
-				MtJDC7JFI0HBWVJOhWCegAzTCQoLtbdOobaAL6FNgA+A
+				MtJDC7JFI0HBWVPm8wcHgAzTCQoLtbdOobaAL6FNgA+A
 				EF8QLXNmdHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3
 				LXJvb3QvdGVtcGxhdGVyeV8QZi92YXIvZm9sZGVycy82
 				Ni9oX252bng0OTVmc19wMGxteGI3Z3RwcDQwMDAwZ3Ev
