--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/16-CS-Education-Summit/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/16-CS-Education-Summit/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-06-12T14:57:36Z</date>
+						<date>2019-06-13T15:48:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -112,11 +112,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								0pMculnL9v3X
-								wmNnrP+DwA==
+								9DoaP2w0G7/K
+								MgXKGTqxxA==
 								</data>
 								<key>Size</key>
-								<integer>19825</integer>
+								<integer>20202</integer>
 							</dict>
 							<key>files/stacks-image-a86827b-250x250.jpg</key>
 							<dict>
@@ -142,31 +142,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5NhtiRf5CDv+
-								WeLYmDeCCg==
+								tt6feU6wcYVa
+								4LOKgv9ZWA==
 								</data>
 								<key>Size</key>
-								<integer>105775</integer>
+								<integer>106597</integer>
 							</dict>
 							<key>files/stacks_page_page86.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								dBj/okx/G9N+
-								VdShlJ55Xw==
+								vkfSKyOHTnng
+								hNrxS+/MVw==
 								</data>
 								<key>Size</key>
-								<integer>21087</integer>
+								<integer>20660</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								TbyMt8wFpN6g
-								laBaWS1lGg==
+								4nCA4HrGjFUu
+								JmCH+Lohxw==
 								</data>
 								<key>Size</key>
-								<integer>49856</integer>
+								<integer>50422</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
