--- a/vermontcomplexsystems-foundation.rw8/RWUIState.plist
+++ b/vermontcomplexsystems-foundation.rw8/RWUIState.plist
@@ -13,14 +13,14 @@
 		<string>page5</string>
 	</array>
 	<key>pageInspectorVisible</key>
-	<true/>
+	<false/>
 	<key>projectViewVisible</key>
 	<true/>
 	<key>projectViewWidth</key>
 	<real>228</real>
 	<key>selectedItems</key>
 	<array>
-		<string>page71</string>
+		<string>page86</string>
 	</array>
 	<key>selectedMode</key>
 	<integer>0</integer>
